[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "suno-bark"
version = "0.0.1a"
description = "Bark text to audio model"
authors = ["Suno Inc <hello@suno.ai>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "*"
encodec = "*"
funcy = "*"
huggingface-hub = "^0.14.1"
numpy = "*"
scipy = "*"
tokenizers = "*"
torch = "*"
tqdm = "*"
transformers = "*"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
codecov = "*"
flake8 = "*"
hypothesis = "^6.14,<7"
isort = "^5.0.0,<6"
jupyter = "*"
mypy = "*"
nbconvert = "*"
nbformat = "*"
pydocstyle = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
